# opentitan-provisioning

./: bazelisk.sh  target-location.sh
src/NVT/: SRD.docx
src/NVT/registry_shim/: BUILD.bazel  registry_shim.go
src/ate/: BUILD.bazel  ate_api.h  ate_dll.cc  version.rc
src/pa/services/: pa.go
src/pk11/: object.go
src/registry_buffer/proto/: BUILD.bazel  device_id.proto  registry_buffer.proto
src/spm/services/: se_pk11.go  spm.go
